--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: "My Data Analytics Portfolio"
 description: "A showcase of my data analytics projects"
 theme: jekyll-theme-cayman
+color_scheme: dark
+footer: "© 2025 Vishal Soni - Built with GitHub Pages"
