--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "My Data Analytics Portfolio"
-description: "A showcase of my data analytics projects"
-theme: jekyll-theme-cayman
+#title: "My Data Analytics Portfolio"
+#description: "A showcase of my data analytics projects"
+#theme: jekyll-theme-cayman
